{
    "version": 1,
    "name": "PlayerInputSet",
    "maps": [
        {
            "name": "Player",
            "id": "833d323b-a78f-4880-9723-2a33d9232276",
            "actions": [
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "7d73e5c0-8578-4d55-8fd1-18a366e68ec3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reloading",
                    "type": "Button",
                    "id": "788ef051-54cd-4160-88fa-080b185d3157",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "56b32d1c-e888-4d61-88db-d1842237f876",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Building",
                    "type": "Button",
                    "id": "0c1c4159-c25c-404c-9fb0-aa8f1999c591",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollUp",
                    "type": "Value",
                    "id": "d23a12cd-78f1-4933-a1f3-e62693fe1061",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollDown",
                    "type": "Button",
                    "id": "8c9745b4-57dc-43e7-b683-8562a44e07dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7a442b86-bdda-4fd0-93ff-e65ba7caac21",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0f74570-bc73-4f66-90d9-7f513ed2abbe",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reloading",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c1e668e-9f84-47e2-b2c5-936b98fa2aa4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c63c7f87-c27c-4149-8988-c9f52a69f4c8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f280e6ae-13ca-4f50-aadc-35e71b939cbd",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Building",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "503ab053-690e-4163-86b1-1e140c8e1207",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "504ea7fe-6f7c-4198-9d80-7a2624fcca33",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}